2005-12-24  Alan Modra  <amodra@bigpond.net.au>

	* aix5ppc-core.c: Remove duplicate prototypes.
	(xcoff64_core_file_matches_executable_p): Provide implementation
	for !AIX_5_CORE.
	* corefile.c (generic_core_file_matches_executable_p): Correct
	syntax error in prototype.
	* libbfd-in.h (generic_core_file_matches_executable_p): Delete.
	* libbfd.h: Regenerate.
	* bfd-in2.h: Regenerate.

2005-12-23  Michael Weiser  <michael@weiser.dinsnail.net>

	PR 1150
	* elf-bfd.h (struct elf_backend_data): New field
	'elf_backend_ignore_undef_symbol'.
	* elfxx-target.h (elf_backend_ignore_undef_symbol): Define to NULL
	if not already defined.
	(elfNN_bed): Initialise the elf_backend_ignore_undef_symbol field.
	* elfxx-mips.c (_bfd_mips_elf_ignore_undef_symbol): New function.
	* elfxx-mips.h (elf_backend_ignore_undef_symbol): Define and
	prototype.
	* elflink.c (elf_link_output_extsym): Check
	elf_backend_ignore_undef_symbol before reporting an undefined
	symbol in a shared library.

2005-12-23  Joel Brobecker  <brobecker@adacore.com>

	* corefile.c (generic_core_file_matches_executable_p): New function.
	* libbfd-in.h (generic_core_file_matches_executable_p): Add
	declaration.
	* libbfd.h: Regenerate.
	* hpux-core.c: ANSIfy function declarations and prototypes.
	(thread_section_p): Manually expand bfd_section_name macro
	to make it clear that parameter ABFD is not used.
	(hpux_core_core_file_matches_executable_p): Delete, replaced
	by macro pointing to generic_core_file_matches_executable_p.
	
	* aix386-core.c: Replace core_file_matches_executable_p null
	implementation by generic_core_file_matches_executable_p by
	using a macro.
	* aix5ppc-core.c: Likewise.
	* cisco-core.c: Likewise.
	* hppabsd-core.c: Likewise.
	* irix-core.c: Likewise.
	* lynx-core.c: Likewise.
	* mach-o.c: Likewise.
	* netbsd-core.c: Likewise.
	* osf-core.c: Likewise.
	* ptrace-core.c: Likewise.
	* sco5-core.c: Likewise.
	* trad-core.c: Likewise.

2005-12-19  David Heine  <dlheine@tensilica.com>
