@@ -1,3 +1,9 @@
+2005-12-27  Alan Modra  <amodra@bigpond.net.au>
+
+	* Makefile.am: Run "make dep-am".
+	* Makefile.in: Regenerate.
+	* po/SRC-POTFILES.in: Regenerate.
+
 2005-12-24  Alan Modra  <amodra@bigpond.net.au>
 
 	* aix5ppc-core.c: Remove duplicate prototypes.
